Add main componets to organise app structure

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -36,6 +36,9 @@ body {
     animation: logo-zoom infinite 20s linear;
 }
 
+.card {
+    width: 18rem;
+}
 .map {
     position: relative;
     height: 600px;
